dashapp/nohup.out
python: can't open file 'dashapp/app2.py': [Errno 2] No such file or directory
python: can't open file 'dashapp/app2.py': [Errno 2] No such file or directory
python: can't open file 'dashapp/app2.py': [Errno 2] No such file or directory
python: can't open file 'dashapp/app2.py': [Errno 2] No such file or directory
python: can't open file 'dashapp/app2.py': [Errno 2] No such file or directory
Running on http://0.0.0.0:80/
Debugger PIN: 584-975-618
 * Serving Flask app "app2" (lazy loading)
 * Environment: production
   WARNING: Do not use the development server in a production environment.
   Use a production WSGI server instead.
 * Debug mode: on
Running on http://0.0.0.0:80/
Debugger PIN: 939-603-112
No handlers could be found for logger "werkzeug"
Running on http://0.0.0.0:80/
Debugger PIN: 051-435-711
Running on http://0.0.0.0:80/
Debugger PIN: 651-982-146
Running on http://0.0.0.0:80/
Debugger PIN: 056-055-062
Running on http://0.0.0.0:80/
Debugger PIN: 063-839-317
No handlers could be found for logger "werkzeug"
Running on http://0.0.0.0:80/
Debugger PIN: 155-155-592
Running on http://0.0.0.0:80/
Debugger PIN: 180-481-832
Running on http://0.0.0.0:80/
Debugger PIN: 500-128-801
Running on http://0.0.0.0:80/
Debugger PIN: 150-265-410
Running on http://0.0.0.0:80/
Debugger PIN: 513-482-424
Running on http://0.0.0.0:80/
Debugger PIN: 849-695-420
Running on http://0.0.0.0:80/
Debugger PIN: 687-087-234
Running on http://0.0.0.0:80/
Debugger PIN: 297-148-352
Running on http://0.0.0.0:80/
Debugger PIN: 350-683-098
Running on http://0.0.0.0:80/
Debugger PIN: 442-919-384
No handlers could be found for logger "werkzeug"
Traceback (most recent call last):
  File "/usr/lib/python2.7/SocketServer.py", line 596, in process_request_thread
    self.finish_request(request, client_address)
  File "/usr/lib/python2.7/SocketServer.py", line 331, in finish_request
    self.RequestHandlerClass(request, client_address, self)
  File "/usr/lib/python2.7/SocketServer.py", line 652, in __init__
    self.handle()
  File "/home/ubuntu/.local/lib/python2.7/site-packages/werkzeug/serving.py", line 293, in handle
    rv = BaseHTTPRequestHandler.handle(self)
  File "/usr/lib/python2.7/BaseHTTPServer.py", line 340, in handle
    self.handle_one_request()
  File "/home/ubuntu/.local/lib/python2.7/site-packages/werkzeug/serving.py", line 324, in handle_one_request
    self.raw_requestline = self.rfile.readline()
IOError: [Errno 104] Connection reset by peer
----------------------------------------
Exception happened during processing of request from ('185.92.73.232', 31507)
----------------------------------------
Running on http://0.0.0.0:80/
Debugger PIN: 444-020-781
/home/ubuntu/.local/lib/python2.7/site-packages/dash/resources.py:46: UserWarning:

A local version of https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/css/materialize.min.css is not available

Running on http://0.0.0.0:80/
Debugger PIN: 333-755-021
/home/ubuntu/.local/lib/python2.7/site-packages/dash/resources.py:46: UserWarning:

A local version of https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/css/materialize.min.css is not available

  File "app2.py", line 38
    sql_query_0 = "SELECT CAST(time AS DATE), count(*) as frequency FROM revs WHERE time BETWEEN '2019-01-01' AND " + dt.today() + " GROUP BY CAST(time AS DATE)"
                ^
SyntaxError: invalid syntax
